feat: placemark,umd,rom examples

--- a/examples/umd/umd-example.html
+++ b/examples/umd/umd-example.html
@@ -39,12 +39,7 @@
         <//>
       `;
 
-      ReactDOM.render(
-        html`
-          <${App} />
-        `,
-        document.getElementById('root')
-      );
+      ReactDOM.render(html` <${App} /> `, document.getElementById('root'));
     </script>
   </body>
 </html>
